[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/font/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/BulletCooldownOption.gd" type="Script" id=2]
[ext_resource path="res://menu/BulletSpeed.gd" type="Script" id=3]
[ext_resource path="res://menu/Options.gd" type="Script" id=4]
[ext_resource path="res://menu/BulletLife.gd" type="Script" id=5]
[ext_resource path="res://menu/OptionButton.gd" type="Script" id=6]
[ext_resource path="res://menu/WinCondition.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -80.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 944.0
margin_bottom = 520.0

[node name="GameOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 235.0
margin_bottom = 520.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GameOptions"]
margin_right = 235.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Game Options"

[node name="WinCondition" type="VBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions"]
margin_top = 53.0
margin_right = 235.0
margin_bottom = 135.0
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions/WinCondition"]
margin_right = 235.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GameOptions/WinCondition/HBoxContainer"]
margin_top = 3.0
margin_right = 125.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 5 )
text = "Win Condition: "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer/GameOptions/WinCondition/HBoxContainer"]
margin_left = 129.0
margin_right = 207.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 6 )
toggle_mode = false
shortcut_in_tooltip = false
text = "Score"
script = ExtResource( 6 )

[node name="Score" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions/WinCondition"]
margin_top = 30.0
margin_right = 235.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GameOptions/WinCondition/Score"]
margin_top = 2.0
margin_right = 54.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 7 )
text = "Score:"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/HBoxContainer/GameOptions/WinCondition/Score"]
margin_left = 58.0
margin_right = 132.0
margin_bottom = 24.0
min_value = 1.0
max_value = 3000.0
value = 300.0

[node name="Time" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions/WinCondition"]
margin_top = 58.0
margin_right = 235.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GameOptions/WinCondition/Time"]
margin_top = 2.0
margin_right = 54.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 7 )
text = "Time:  "

[node name="SpinBox" type="SpinBox" parent="MarginContainer/HBoxContainer/GameOptions/WinCondition/Time"]
margin_left = 58.0
margin_right = 132.0
margin_bottom = 24.0
min_value = 1.0
max_value = 240.0
value = 99.0

[node name="BulletCooldown" type="VBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions"]
margin_top = 139.0
margin_right = 235.0
margin_bottom = 179.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions/BulletCooldown"]
margin_right = 235.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GameOptions/BulletCooldown/HBoxContainer"]
margin_right = 158.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Shooting Cooldown"

[node name="CooldownValue" type="Label" parent="MarginContainer/HBoxContainer/GameOptions/BulletCooldown/HBoxContainer"]
margin_left = 162.0
margin_right = 162.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )

[node name="HSlider" type="HSlider" parent="MarginContainer/HBoxContainer/GameOptions/BulletCooldown"]
margin_top = 24.0
margin_right = 235.0
margin_bottom = 40.0
size_flags_horizontal = 3
min_value = 0.25
max_value = 2.0
step = 0.25
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="BulletSpeed" type="VBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions"]
margin_top = 183.0
margin_right = 235.0
margin_bottom = 223.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions/BulletSpeed"]
margin_right = 235.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GameOptions/BulletSpeed/HBoxContainer"]
margin_right = 104.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Bullet Speed"

[node name="Speed" type="Label" parent="MarginContainer/HBoxContainer/GameOptions/BulletSpeed/HBoxContainer"]
margin_left = 108.0
margin_right = 108.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )

[node name="HSlider" type="HSlider" parent="MarginContainer/HBoxContainer/GameOptions/BulletSpeed"]
margin_top = 24.0
margin_right = 235.0
margin_bottom = 40.0
size_flags_horizontal = 3
min_value = 40.0
max_value = 80.0
step = 1.0
value = 60.0
tick_count = 25
ticks_on_borders = true

[node name="BulletLife" type="VBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions"]
margin_top = 227.0
margin_right = 235.0
margin_bottom = 267.0
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GameOptions/BulletLife"]
margin_right = 235.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GameOptions/BulletLife/HBoxContainer"]
margin_right = 127.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Bullet Life Time"

[node name="Life" type="Label" parent="MarginContainer/HBoxContainer/GameOptions/BulletLife/HBoxContainer"]
margin_left = 131.0
margin_right = 131.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )

[node name="HSlider" type="HSlider" parent="MarginContainer/HBoxContainer/GameOptions/BulletLife"]
margin_top = 24.0
margin_right = 235.0
margin_bottom = 40.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 5.0
step = 1.0
value = 3.0
tick_count = 5
ticks_on_borders = true

[node name="Button" type="Button" parent="MarginContainer"]
margin_left = 876.0
margin_top = 494.0
margin_right = 944.0
margin_bottom = 520.0
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = SubResource( 4 )
text = "Return"
[connection signal="item_selected" from="MarginContainer/HBoxContainer/GameOptions/WinCondition/HBoxContainer/OptionButton" to="MarginContainer/HBoxContainer/GameOptions/WinCondition" method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/GameOptions/WinCondition/Score/SpinBox" to="MarginContainer/HBoxContainer/GameOptions/WinCondition" method="_on_score_SpinBox_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/GameOptions/WinCondition/Time/SpinBox" to="MarginContainer/HBoxContainer/GameOptions/WinCondition" method="_on_time_SpinBox_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/GameOptions/BulletCooldown/HSlider" to="MarginContainer/HBoxContainer/GameOptions/BulletCooldown" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/GameOptions/BulletSpeed/HSlider" to="MarginContainer/HBoxContainer/GameOptions/BulletSpeed" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/GameOptions/BulletLife/HSlider" to="MarginContainer/HBoxContainer/GameOptions/BulletLife" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_Button_pressed"]
